--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <link
     rel="icon"
-    href="https://cdn-icons-png.flaticon.com/512/5968/5968705.png"
+    href="assets/Logo.png"
     type="image/png"
   />
   <link
@@ -28,7 +28,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
   />
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  <title>seyha.dev</title>
+  <title>Phat Seyha</title>
 </head>
 
   <body>
